added updated code and pages

--- a/index.html
+++ b/index.html
@@ -6,24 +6,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>RealMe</title>
 </head>
 
 <body>
-    <div class="main-container"> <!-- id= "....."    -->
+    <div class="main-container">
         <div class="navbar">
-
-            <a href="#" class="logo">RealMe</a>
+            <a href="#" class="logo"><img src="images/mobile.jpg" />RealMe</a>
             <ul>
                 <li><a href="index.html"> Home </a> </li>
-                <li><a href="phone.html"> Phone </a> </li>
-                <li><a href="accessories.html"> Accessories </a> </li>
-                <li><a href="cart.html"> Cart</a> </li>
+                <li><a href="services.html"> Services </a> </li>
+                <li><a href="about.html"> About </a> </li>
+                <li><a href="emi.html"> EMI </a> </li>
+                <li><a href="#"> Cart</a> </li>
                 <li><a href="contact.html"> Contact</a> </li>
             </ul>
         </div>
-        <div class="container"></div>
+        <div class="container">
+            <div class="image-container">
+                <img src="images/mobile1.png" />
+            </div>
+            <div class="features-container">
+                <div class="overlay"></div>
+                <div id="circle">
+                    <div class="feature one">
+                        <div class="icon-container">
+                            <img src="images/camera.png" alt="" srcset="">
+                        </div>
+                        <div class="text-container">
+                            <h2>Camera</h2>
+                            <p>12 MP, Good Quality</p>
+                        </div>
+                    </div>
+                    <div class="feature two">
+                        <div class="icon-container">
+                            <img src="images/processor.png" alt="" srcset="">
+                        </div>
+                        <div class="text-container">
+                            <h2>Processor</h2>
+                            <p>12 MP, Good Quality</p>
+                        </div>
+                    </div>
+                    <div class="feature three">
+                        <div class="icon-container">
+                            <img src="images/display.png" alt="" srcset="">
+                        </div>
+                        <div class="text-container">
+                            <h2>Display</h2>
+                            <p>12 MP, Good Quality</p>
+                        </div>
+                    </div>
+                    <div class="feature four">
+                        <div class="icon-container">
+                            <img src="images/battery.png" alt="" srcset="">
+                        </div>
+                        <div class="text-container">
+                            <h2>Battery</h2>
+                            <p>12 MP, Good Quality</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="nav-container">
+                <i class="fa-solid fa-angle-up arrow" id="btnUp" onclick=upClick()></i>
+                <h2>Features</h2>
+                <i class="fa-solid fa-angle-down arrow" id="btnDown" onclick=downClick()></i>
+            </div>
+        </div>
     </div>
 </body>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"
+    integrity="sha512-rpLlll167T5LJHwp0waJCh3ZRf7pO6IT1+LZOhAyP6phAirwchClbTZV3iqL3BMrVxIYRbzGTpli4rfxsCK6Vw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script src="script.js"></script>
 
 </html>
